css/styles.scss
/* ... */
.product-listing-page{
	.main-content{
		overflow: hidden;
		.products-head{
			border-bottom:1px solid #ccc;
			text-align:center;
			margin-bottom: 20px;
			p{
				margin-bottom: 15px;
			}
		}
		.top-filters{
			background:#efefef;
			padding:10px 20px;
			#items-per-page{
				width: 180px;
			}
			#sortby{
				width: 180px;	
			}
		}
		.item-navigation{
			border-bottom:1px solid #b8b8b8;
			position:relative;
			padding:10px 0;
			margin-bottom: 20px;
			.view-page{
				font-size: 14px;
				input#page{
					width: 36px;
				}
				button{
					padding:2px 6px;
					-webkit-border-radius: 3px;
					-moz-border-radius: 3px;
					border-radius: 3px;
					background-color: #626262;
					-webkit-box-shadow: inset 0 2px rgba(255,255,255,.25);
					-moz-box-shadow: inset 0 2px rgba(255,255,255,.25);
					box-shadow: inset 0 2px rgba(255,255,255,.25);
					border: solid 1px #e2e2e2;
					background-image: -webkit-linear-gradient(bottom, #f1f1f1, #f5f5f5);
					background-image: -moz-linear-gradient(bottom, #f1f1f1, #f5f5f5);
					background-image: -o-linear-gradient(bottom, #f1f1f1, #f5f5f5);
					background-image: linear-gradient(to top, #f1f1f1, #f5f5f5);
				}
			}
			p.item-count{
				position: absolute;
				z-index: 0;
				width: 100%;
				text-align: center;
				font-weight: bold;
				margin-top:5px;
			}
			.pull-right{
				position:relative;
				z-index: 8;
			}
			.item-pager{
				.btn{
					padding:2px 6px;
				}
				.disabled{
					background:#e2e2e2;
					position:relative;
					border:1px solid #e2e2e2;
					.icon-first{
						background-position:-96px -31px;
					}
					.icon-prev{
						background-position: -104px -31px;
					}
					.icon-next{
						background-position: -120px -31px;
					}
					.icon-last{
						background-position: -135px -31px;
					}
				}
			}
		}

	}
	.main-content.full{
		overflow: visible;
	}
	.pagination-wrap{
		border-top:1px solid #ccc;
		border-bottom:1px solid #ccc;
		margin-bottom: 20px;
	}
}
.products-carousel{
	margin-left:-3.5714286%;
}
.products-carousel,
.products{
	list-style-type: none;
	.product{
		list-style-type: none;
		position: relative;
		float:left;
		width: 27.142857%;
		margin:0 3% 30px;
		.product-image{
			text-align: center;
			min-height: 206px;
			vertical-align: middle;
			line-height: 206px;
			position:relative;
			img{
				vertical-align: middle;
				display: inline-block;
			}
			.btn-quicklook{
				font-size: 14px;
				font-family: $brandon-bold;
				@include border-radius(3px);
			}
		}
		.ribbon{
			position:absolute;
			top:0;
			right:0;
		}
		.product-body{
			border-top:1px solid #ccc;
			padding:10px 0;
			font-size: 12px;
			.product-name{
				color: #373737;
				font-size: 14px;
				font-family: $brandon-bold;
				text-transform: uppercase;
			}
			.old-price{
				text-decoration: line-through;
				font-size: 12px;
				color: #6b6b6b;
				margin-bottom: 0;
				line-height: 18px;
			}
			.new-price{
				color: #fd4b6d;
			}
			span.main-price{
				font-size: 16px;
				font-weight: bold;
			}
			p{
				margin:0;
			}
		}
	}
}
.products-carousel{
	margin:0;
	.product{
		width:190px;
		margin:0 50px 0 0;
	}
	li:last-child{
		margin-right:0;
	}
}

.product-large-view{
	.the-product{
		overflow: hidden;
		zoom:1;
		margin-bottom: 20px;
		.gallerific-wrap{
			float:left;
			width: 460px;
			margin-right:40px;
		}
		.product-information{
			overflow: hidden;
			zoom:1;
			.info-head{
				font-size: 22px;
				color:#37373;
				font-family: $brandon-bold;
				text-transform: uppercase;
				margin-bottom: 10px;
			}
			.info-bd{
				.info{
					font-size: 12px;
					line-height: 18px;
					color: #6b6b6b;
					position:relative;
					p{
						margin-bottom: 0;
					}
					span.guarantee-ribbon{
						position: absolute;
						right:0;
						top:50%;
						width: 99px;
						height: 99px;
						background:url(../images/sprite.png) 0 -98px;
						margin-top:-50px;
					}
					span.lowprice-ribbon{
						position: absolute;
						right:0;
						top:50%;
						margin-top:-50px;	
					}
				}
				.option-block{
					ul.gemstone-types{
						margin:0 0 20px 0;
						font-size: 12px;
						list-style-type: none;
						padding:0;
						li{
							display: inline-block;
							width: 160px;
							margin-bottom:10px;
							a{color: #706770;}
							.icon{
								margin-right: 10px;
							}
						}
						li:nth-child(3n){
							width: auto;
						}
					}
					.group{
						border-top:1px solid #ccc;
						.block-subhead{
							font-family: $museo-300;
							font-size: 14px;
							margin:10px 0;
						}
					}
					.btn-lg{
						font-family:$brandon-bold;
						width: 48%;
					}
				}
				.socials{
					margin:10px 0 15px;
					ul{
						margin:0;
						padding:0;
						list-style-type: none;
						font-family: $brandon-bold;
						li{
							display:inline-block;
							vertical-align: middle;
							margin-right:5px;
						}
						li:last-child{
							margin-right: 0;
						}
					}
				}
			}
		}
	}
	.product-details{
		overflow: hidden;
		zoom:1;
		margin-bottom: 40px;
		.product-details-tabs{
			float:left;
			margin-right:20px;
			width: 74%;
		}
		.product-details-tabs.full{
			float:none;
			width: 100%;
			margin-right:0;
		}
		.sidebar{
			overflow: hidden;
			float:none;
			max-width: auto;
			width: auto;
			margin-left:0;
			.module{
				.mod-hd{
					text-align: left !important;
				}
			}
			.mod-recommended{
				.products{
					margin:0;
					li.product{
						float:none;
						width: 100%;
						.ribbon{
							right:7px;
						}
					}
				}
			}
		}
	}
}
/* ... */

